--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@redux-requests/axios": "^1.2.0",
     "@redux-requests/core": "^1.7.0",
+    "@redux-requests/react": "^1.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -22,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
+    "reselect": "^4.1.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
